tests/machine/x/ocaml/group_by_having.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_having.ml", line 10, characters 35-45:
10 |       let cur = try List.assoc key !__groups0 with Not_found -> [] in
                                        ^^^^^^^^^^
Error: This expression has type (Obj.t * (string * Obj.t) list list) list
       but an expression was expected of type (string * 'a) list
       Type Obj.t is not compatible with type string 


Context (around line 10):
   8 |   List.iter (fun (p : record1) ->
   9 |       let key = p.city in
  10 |       let cur = try List.assoc key !__groups0 with Not_found -> [] in
  11 |       __groups0 := (key, p :: cur) :: List.remove_assoc key !__groups0;
  12 |   ) people;
